k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app-container
          image: app-image:v1 # Versión 1
          ports:
            - containerPort: 5000
          imagePullPolicy: Never
          # env:
          # - name: ENV
          #   value: "dev"
