k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - port: 80        # Puerto del servicio
      targetPort: 5000  # A donde se redirige el tráfico (hacia el container)
