k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
        # Cualquier petición que llegue a la raíz, enviarla al puerto 80 del servicio app-service
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
